# beer-game

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-simulation-engine-ai/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-ui-shell-per-turn-play/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-debrief-charts-narrative/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
beergame/ai/: __init__.py  base.py  sterman.py
beergame/charts/: __init__.py  orders_inventory.py
beergame/config/: costs.py  scenarios.py
beergame/engine/: __init__.py  costs.py  demand.py  metrics.py  state.py  tick.py
beergame/narrative/: __init__.py  templates.py
beergame/views/: __init__.py  debrief.py  play.py  rules.py  setup.py
tests/: conftest.py  test_app_smoke.py  test_bullwhip_emerges.py  test_charts_orders_inventory.py  test_costs.py  test_determinism.py  test_equilibrium.py  test_metrics_debrief.py  test_narrative.py  test_no_streamlit_import.py  test_shipments_received_history.py  test_station_view_visibility.py  test_sterman_heuristic.py  test_tick_invariants.py
(+5 files in other folders)
