[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beergame"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["beergame*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
